--- a/docs/sun/249/sun249.tex
+++ b/docs/sun/249/sun249.tex
@@ -1,32 +1,27 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt]{starlink}
 
 % ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
 
 %% Need PDF to take preference over PNG
 \DeclareGraphicsExtensions{.pdf,.png}
 
-\pagestyle{myheadings}
-
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {249.2}
-\newcommand{\stardocauthors}   {Mark Taylor}
-\newcommand{\stardocdate}      {8 June 2005}
-\newcommand{\stardoctitle}     {INT-WFC - Astrometric Calibration for the INT Wide Field Camera}
-\newcommand{\stardocversion}   {}
-\newcommand{\stardocmanual}    {User Note}
-\newcommand{\stardocabstract}  {
+\stardocnumber      {249.2}
+\stardocauthors     {Mark Taylor}
+\stardocdate        {8 June 2005}
+\stardoctitle       {INT-WFC - Astrometric Calibration for the INT Wide Field Camera}
+\stardocmanual      {User Note}
+\stardocabstract  {
 Images observed using the Wide Field Camera instrument
 on the Isaac Newton Telescope contain nonlinear optical distortions.
 This note gives a quantitative description of these distortions.
@@ -36,287 +31,14 @@ the \xref{CCDPACK}{sun139}{} package.
 % ? End of document identification
 % -----------------------------------------------------------------------------
 
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-% Size of \tt text - looks better smaller in LaTeX but not HTML.
-\newcommand{\ttsize}{\latexhtml{\small}{}}
-
-% Environment for indenting and using a small font.
-\newenvironment{myquote}{\begin{quote}\ttsize}{\end{quote}}
-
-% Figure environment. Defined for latex2html. #1 is postscript file
-% #2 the qualifiers, #3 the gif file, #4 the label, #5 the caption.
-\newcommand{\myfig} [5] {
-  \begin{figure}
-    \centering\includegraphics[#2]{#1}
-    \typeout{#1 inserted on page \arabic{page}}
-    \caption{\label{#4}#5}
-  \end{figure}
-  }
-\begin{htmlonly}
-  \newcommand{\myfig}[5]{
-    \htmladdimg{#3}\\
-    Figure: \label{#4} #5
-    }
-\end{htmlonly}
-
-
+% ? Document specific \providecommand or \newenvironment commands.
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section{Astrometric calibration for INT Wide Field Camera images}
 
@@ -325,7 +47,7 @@ contains four CCD chips of 2048 $\times$ 4096 pixels
 positioned roughly, but not exactly, as shown in
 figure~\ref{fig:ideal}.
 
-\myfig{sun249_ideal}{}{sun249_ideal.png}{fig:ideal}{Idealised arrangement of WFC CCDs}
+\myfig{sun249_ideal}{}{}{fig:ideal}{Idealised arrangement of WFC CCDs}{Idealised arrangement of WFC CCDs}
 
 In order to do accurate astrometry with data obtained
 from this instrument, it is necessary to correct for the
@@ -413,7 +135,8 @@ accuracy of 1 or 2 pixels, which is around half an arcsecond.
 Figure~\ref{fig:exag} gives an exaggerated representation of the
 shapes and positions of the CCDs as mapped on to the new coordinate system.
 
-\myfig{sun249_exag4}{}{sun249_exag4.png}{fig:exag}{Exagerrated view of the
+\myfig{sun249_exag4}{}{}{fig:exag}{Exagerrated view of the
+actual arrangement of the CCDs.}{Exagerrated view of the
 actual arrangement of the CCDs.  The dots in the corners mark the
 pixel origin for each CCD and the ``$\times$'' marks the origin of
 the unified coordinate system.}
@@ -424,16 +147,15 @@ the unified coordinate system.}
 For users of Starlink software,
 the calibrated coordinate information can be attached automatically
 to image files using the
-\htmladdnormallink{ASTIMP}{http://capc23.ast.cam.ac.uk/star/local/docs/sun139.htx/node70.html#xref_ASTIMP}
-command, and the file {\tt INT-WFC.ast}.
+\xref{ASTIMP}{sun139}{ASTIMP}
+command, and the file \texttt{INT-WFC.ast}.
 This file is distributed in the CCDPACK package
-(in directory {\tt \$CCDPACK\_DIR}, or {\tt bin/ccdpack}).
+(in directory \texttt{\$CCDPACK\_DIR}, or \texttt{bin/ccdpack}).
 
 To use this facility,
 it is best if the files are first converted to Starlink \xref{NDF}{sun33}{}
 format using the \xref{CONVERT}{sun55}{} package as follows:
-\begin{myquote}
-\begin{verbatim}
+\begin{terminalv}
 % convert
 
    CONVERT commands are now available -- (Version 1.5-4)
@@ -444,10 +166,9 @@ format using the \xref{CONVERT}{sun55}{} package as follows:
    Type "showme sun55" to browse the hypertext documentation.
 
 % fits2ndf in='r10628?.fits' out='*' container=true
-\end{verbatim}
-\end{myquote}
-which will convert the FITS file {\tt r106280.fits}
-into the NDF {\tt r106280.sdf} and so on.
+\end{terminalv}
+which will convert the FITS file \texttt{r106280.fits}
+into the NDF \texttt{r106280.sdf} and so on.
 The Starlink software will in fact work with FITS files,
 but because it converts them on the fly between FITS and NDF formats
 before and after each command,
@@ -455,8 +176,7 @@ this can be rather slow with files the size of WFC frames.
 
 Once the file is in Starlink NDF format,
 from the Unix C shell do the following:
-\begin{myquote}
-\begin{verbatim}
+\begin{terminalv}
 % ccdpack
 
    CCDPACK commands are now available -- (Version 4.0-16)
@@ -497,8 +217,7 @@ from the Unix C shell do the following:
     Matched with frameset ID "FITSID CHIPNAME 'A5382-1-7'"
     Rotating additional 180 degrees
     New frame in domain "INT-WFC" added
-\end{verbatim}
-\end{myquote}
+\end{terminalv}
 This command sets the Current coordinate frame of the specified
 NDF files to the new coordinate system $(x',y')$ described above.
 As well as applying the linear and nonlinear geometry terms whose
@@ -507,7 +226,7 @@ it also rotates the coordinates according to the value of the
 ROTSKYPA FITS header card, which records the orientation of the
 turntable when the observation was made;
 in this case it was oriented at 180$^\circ$.
-In this way, applying the {\tt INT-WFC.ast} file to any set of
+In this way, applying the \texttt{INT-WFC.ast} file to any set of
 image NDF files will result in them sharing coordinates which
 are related by a simple shift in X and Y coordinates,
 since the nonlinear optical distortions,
@@ -522,8 +241,7 @@ If you display any of the images using
 \xref{DISPLAY}{sun95}{DISPLAY}
 application, the axes will show the coordinates in the new frame
 as in figure~\ref{fig:display}:
-\begin{myquote}
-\begin{verbatim}
+\begin{terminalv}
 % kappa
 
    KAPPA commands are now available -- (Version 0.13-7)
@@ -532,11 +250,11 @@ as in figure~\ref{fig:display}:
    Type "showme sun95" to browse the hypertext documentation
 
 % display r106282 style='"grid=1,gap=500"'
-\end{verbatim}
-\end{myquote}
+\end{terminalv}
 
-\myfig{sun249_r106282-s8-display}{}{sun249_r106282-display.png}{fig:display}{Display
-of a single CCD image with coordinates grafted onto it using {\tt ASTIMP}.
+\myfig{sun249_r106282-s8-display}{}{}{fig:display}{Display of a single
+CCD image with coordinates grafted onto it.}{Display
+of a single CCD image with coordinates grafted onto it using \texttt{ASTIMP}.
 Close inspection will show that the grid is not quite parallel to the
 sides of the image, or straight,
 because of the slight rotation from the vertical and nonlinear distortion.}
