datacube: Fix xref to SUN/190

--- a/applications/datacube/sun237/sun237.tex
+++ b/applications/datacube/sun237/sun237.tex
@@ -1176,7 +1176,7 @@ co-operation and contributions.
            The name of an text log file containing the fitted Gaussian
            coefficients for each spatial pixel.  The file is written as a
            Starlink Small Text List (STL) described in
-           \xref{SUN/190}{sun190}).  The STL file comprises a schema to
+           \xref{SUN/190}{sun190}{}).  The STL file comprises a schema to
            locate and describe the columns, and store global properties; and a
            formatted table of the coefficients.  The schema includes the units
            and a brief description of each column, and the name of the input
