--- a/docs/sgp/001/sgp1.tex
+++ b/docs/sgp/001/sgp1.tex
@@ -1,228 +1,20 @@
-\documentclass[twoside,11pt]{article}
-\pagestyle{myheadings}
+\documentclass[twoside,11pt,nolof,noabs]{starlink}
 
 %------------------------------------------------------------------------------
-\newcommand{\stardoccategory}  {Starlink General Paper}
-\newcommand{\stardocinitials}  {SGP}
-\newcommand{\stardocnumber}    {1.1}
-\newcommand{\stardocauthors}   {D J Rawlinson}
-\newcommand{\stardocdate}      {8 September 1989}
-\newcommand{\stardoctitle}     {Procedure for reporting bugs}
+\stardoccategory    {Starlink General Paper}
+\stardocinitials    {SGP}
+\stardocnumber      {1.1}
+\stardocauthors     {D J Rawlinson}
+\stardocdate        {8 September 1989}
+\stardoctitle       {Procedure for reporting bugs}
 %------------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{240mm}
-\setlength{\topmargin}{-5mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-
-% -----------------------------------------------------------------------------
-%------------------------------------------------------------------------------
-% Add any \newcommand or \newenvironment commands here
+% Add any \providecommand or \newenvironment commands here
 %------------------------------------------------------------------------------
 
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Science \& Engineering Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Large\bf \stardoctitle}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\bf Abstract}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Science \& Engineering Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-%\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-% \newpage
-%\begin{latexonly}
-%   \setlength{\parskip}{0mm}
-%   \tableofcontents
-%   \setlength{\parskip}{\medskipamount}
-%   \markright{\stardocname}
-%\end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
+\scfrontmatter
 
 \section{Introduction}
 The present procedure for reporting bugs in the Starlink Software Collection is
@@ -236,9 +28,9 @@ will keep all users informed of the progress of a bug through the system.
 
 \section{Reporting a bug}
 When a user discovers what s/he thinks is a bug, a mail message should be
-sent to username {\bf STAR} at {\bf RLVAD}. The message should contain as much
-relevant detail as possible. A message saying {\it ` FIGARO doesn't work.'}
-isn't much use to anyone! STAR \footnote[1]{If STAR is unavailable, an
+sent to username \textbf{STAR} at \textbf{RLVAD}. The message should contain as much
+relevant detail as possible. A message saying `\emph{FIGARO doesn't work}.'
+isn't much use to anyone! STAR\footnote[1]{If STAR is unavailable, an
 acknowledgement will be sent by OPER who will carry out the bug reporting
 process.} will then acknowledge the user's note within $1/2$ working day.
 
@@ -252,7 +44,7 @@ with the name of the person dealing with the problem. The replies will consist
 of information from the person supporting the software as to possible fixes.
 
 \subsection{Classification of bugs}
-{\em Question:} When is a bug not a bug? {\em Answer:} When it is a feature!
+\emph{Question:} When is a bug not a bug? \emph{Answer:} When it is a feature!
 The VAX Notes conference will only allow contributions from the person
 supporting the software and STAR. Each note will be assigned 4 keywords to
 allow users to search the conference for a particular class of bugs.
@@ -260,56 +52,56 @@ allow users to search the conference for a particular class of bugs.
 The four keywords will identify the bug by the following categories:
 \begin{enumerate}
 \item The name of the software item,
-\item Whether the item is {\bf SUPPORTED} or {\bf UNSUPPORTED},
+\item Whether the item is \textbf{SUPPORTED} or \textbf{UNSUPPORTED},
 \item The  status of the bug,
 \begin{enumerate}
-\item {\bf ACTIVE} -- under investigation.
-\item {\bf FEATURE} -- may or may not be fixed in a forthcoming release.
-\item {\bf FIXED} -- fixed, but awaiting release.
-\item {\bf SUSPEND} -- non-reproduceable bug.
-\item {\bf DEAD} -- released.
+\item \textbf{ACTIVE} -- under investigation.
+\item \textbf{FEATURE} -- may or may not be fixed in a forthcoming release.
+\item \textbf{FIXED} -- fixed, but awaiting release.
+\item \textbf{SUSPEND} -- non-reproduceable bug.
+\item \textbf{DEAD} -- released.
 \end{enumerate}
 \item The severity of the bug,
 \begin{enumerate}
-\item {\bf SEVERE} -- bug causes severe disruption to the software.
-\item {\bf MINOR} -- bug is inconvenient to the user.
-\item {\bf PATCH} -- minor bug with workround.
+\item \textbf{SEVERE} -- bug causes severe disruption to the software.
+\item \textbf{MINOR} -- bug is inconvenient to the user.
+\item \textbf{PATCH} -- minor bug with workround.
 \end{enumerate}
 \end{enumerate}
 \subsubsection{Supported and unsupported software}
 If the software item is supported, then a reply will be entered in the
 conference, by that person, containing more information about the bug and the
-actions being taken (if any) and the keyword {\bf SUPPORTED} assigned to the
+actions being taken (if any) and the keyword \textbf{SUPPORTED} assigned to the
 entry. However, if the software is unsupported, it will
-be assigned the keyword {\bf UNSUPPORTED}. Users are encouraged to send any
+be assigned the keyword \textbf{UNSUPPORTED}. Users are encouraged to send any
 known workrounds or fixes to STAR who will put these suggestions in the
 conference. The conference has restricted write access so that it does not
 become a `free for all' and some order can be maintained.
 \subsubsection{Bug status}
-An {\bf ACTIVE} bug is currently being investigated by the support programmer
-and its progress can be followed in the conference. A {\bf FEATURE}, is a `bug'
+An \textbf{ACTIVE} bug is currently being investigated by the support programmer
+and its progress can be followed in the conference. A \textbf{FEATURE}, is a `bug'
 which has a known cause/effect and possibly has a workround.
 It may be that it will be
 fixed in a forthcoming release or that it is a true feature of the software and
-may not be fixed. A {\bf FIXED} bug is where a fix or patch has been supplied
+may not be fixed. A \textbf{FIXED} bug is where a fix or patch has been supplied
 and is awaiting release in a Starlink Software Change. It may be that the bug
 is not reproduceable by the support programmer (over a period of time), the
-bug will go into a state of {\em suspended animation} and assigned the status
-of {\bf SUSPEND}. The keyword {\bf DEAD} will be assigned to a bug that has
+bug will go into a state of \emph{suspended animation} and assigned the status
+of \textbf{SUSPEND}. The keyword \textbf{DEAD} will be assigned to a bug that has
 been fixed and released. Periodically all DEAD bugs will be extracted from the
 conference and archived.
 \subsubsection{Severity of bugs}
 This class of keywords is designed to inform the user as to whether the bug
-will cause {\bf SEVERE} disruption or just a {\bf MINOR} inconvenience. The
-keyword {\bf PATCH} indicates a minor bug with a possible workround
+will cause \textbf{SEVERE} disruption or just a \textbf{MINOR} inconvenience. The
+keyword \textbf{PATCH} indicates a minor bug with a possible workround
 until the bug is fixed properly.
 \subsection{Using the VAX Notes KEYWORD facility}
 As described above, each note will be assigned 4 keywords. To search for all
 bugs on a specific software item, you would type:
-\begin{verbatim}
-        Notes> DIRECTORY/KEYWORD=<item>
-\end{verbatim}
-Where {\em item} is ADAM, FIGARO  etc.
+\begin{terminalv}
+Notes> DIRECTORY/KEYWORD=<item>
+\end{terminalv}
+Where \emph{item} is ADAM, FIGARO  etc.
 and similarly for the keywords in the other categories.
 \newpage
 \section{Procedure to be followed by support programmer}
