docs: Fix xref to GAIA in SC/15

--- a/docs/sc/015/sc15.tex
+++ b/docs/sc/015/sc15.tex
@@ -1978,7 +1978,7 @@ where \verb+printer+ is the name of the printer you want to make your default pr
 
 \subsection{\xlabel{sc15_gaia}GAIA\label{sc15_gaia}}
 
-\xref{GAIA}{sun214} is an image display tool written in C++ by
+\xref{GAIA}{sun214}{} is an image display tool written in C++ by
 \htmladdnormallink{Peter Draper}{mailto:P.W.Draper@durham.ac.uk} based
 on the \htmladdnormallink{SkyCat}{http://archive.eso.org/skycat/}
 image display and catalogue browsing tool developed as part of the
